--- a/FengServerX/overrides/hmclversion.cfg
+++ b/FengServerX/overrides/hmclversion.cfg
@@ -12,7 +12,7 @@
   "precalledCommand": "\"$INST_JAVA\" -jar packwiz-installer-bootstrap.jar https://packwiz.mcseekeri.com/NeoForge/pack.toml",
   "postExitCommand": "",
   "serverIp": "",
-  "wrapper": "prime-run",
+  "wrapper": "",
   "fullscreen": false,
   "noJVMArgs": false,
   "notCheckGame": false,
