chore(gmgmxbxhwwMCmmmm): 更新 Mod 加载器版本

--- a/gmgmxbxhwwMCmmmm/overrides/hmclversion.cfg
+++ b/gmgmxbxhwwMCmmmm/overrides/hmclversion.cfg
@@ -15,16 +15,19 @@
   "wrapper": "",
   "fullscreen": false,
   "noJVMArgs": false,
+  "noOptimizingJVMArgs": false,
   "notCheckGame": false,
   "notCheckJVM": false,
   "notPatchNatives": false,
-  "showLogs": true,
+  "showLogs": false,
+  "enableDebugLogOutput": false,
   "gameDir": "",
   "launcherVisibility": 2,
   "processPriority": 2,
   "useNativeGLFW": false,
   "useNativeOpenAL": false,
   "gameDirType": 1,
+  "defaultJavaPath": "",
   "nativesDir": "",
   "nativesDirType": 0,
   "versionIcon": 0,
